src/snapshots/noko__eval__test__basic-2.snap
---
source: src/eval.rs
expression: "test(\"(head a b a)\")"
---
Ok(
    [
        pushc String("a"),
        pushc Color { r: 33, g: 33, b: 33 },
        pushc String("a"),
        call <func> 3,
    ],
)
