src/snapshots/noko__eval__test__basic-3.snap
---
source: src/eval.rs
expression: "test(\"(head a b #ffffff)\")"
---
Ok(
    [
        pushc String("a"),
        pushc Color { r: 33, g: 33, b: 33 },
        pushc Color { r: 255, g: 255, b: 255 },
        call <func> 3,
    ],
)
