src/snapshots/noko__eval__test__basic.snap
---
source: src/eval.rs
expression: "test(\"a\")"
---
Ok(
    [
        pushc String("a"),
    ],
)
