src/snapshots/noko__eval__test__basic_fail-2.snap
---
source: src/eval.rs
expression: "test(\"(str->int a b a)\")"
---
Err(
    UnregistredFunction {
        help: None,
        function: 1..9,
    },
)
