src/snapshots/noko__eval__test__basic_fail-3.snap
---
source: src/eval.rs
expression: "test(\"(a b #ffffff)\")"
---
Err(
    UnregistredFunction {
        help: Some(
            "'a' is a constant, not a function and cannot be called",
        ),
        function: 1..2,
    },
)
