src/snapshots/noko__eval__test__basic_fail-4.snap
---
source: src/eval.rs
expression: "test(\"(#ffffff)\")"
---
Err(
    CallLiteral {
        literal: 1..8,
    },
)
