src/snapshots/noko__eval__test__basic_fail.snap
---
source: src/eval.rs
expression: "test(\"z\")"
---
Err(
    UnregistredConstant {
        help: None,
        constant: 0..1,
    },
)
