src/snapshots/noko__eval__test__basic_fail_help-2.snap
---
source: src/eval.rs
expression: "test(\"heaf\")"
---
Err(
    UnregistredConstant {
        help: Some(
            "did you mean 'head' perhaps? note that 'head' is a function not a constant",
        ),
        constant: 0..4,
    },
)
