src/snapshots/noko__eval__test__basic_fail_help-3.snap
---
source: src/eval.rs
expression: "test(\"(clope a)\")"
---
Err(
    UnregistredFunction {
        help: Some(
            "did you mean 'close' perhaps? note that 'close' is a value not a function",
        ),
        function: 1..6,
    },
)
