src/snapshots/noko__eval__test__basic_fail_help.snap
---
source: src/eval.rs
expression: "test(\"clope\")"
---
Err(
    UnregistredConstant {
        help: Some(
            "did you mean 'close' perhaps?",
        ),
        constant: 0..5,
    },
)
